# neosec

./: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DELIVERY_CHECKLIST.md  FINAL_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  verify_install.py
docs/: GUIDE.md  QUICKSTART.md
examples/: example_workflow.json  nmap_ffuf_workflow.json
src/neobee/: __init__.py
src/neobee/cli/: main.py
src/neobee/core/: config.py  engine.py  template.py
src/neobee/templates/: __init__.py  conditional_service_workflow.json  conditional_web_workflow.json  data_passing_workflow.json  parallel_workflow.json  sequential_workflow.json  sequential_workflow_v2.json
src/neobee/utils/: ui.py  variables.py
tests/: __init__.py  test_config.py  test_engine.py  test_template.py  test_variables.py
